# DataPadPlusPlus

./: .gitignore  .graphifyignore  AGENTS.md  COMMERCIAL-LICENSE.md  LICENSE  NOTICE  README.md  SUPPORT.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sidecars/litedb/: DataPadPlusPlus.LiteDbSidecar.csproj  Program.cs  README.md
apps/desktop/src-tauri/sidecars/oracle/: DataPadPlusPlus.OracleSidecar.csproj  Program.cs  README.md
apps/desktop/src-tauri/sidecars/oracle/Properties/: AssemblyInfo.cs
apps/desktop/src-tauri/sidecars/oracle/tests/: DataPadPlusPlus.OracleSidecar.Tests.csproj  OracleSidecarTests.cs
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/adapters/: common.rs  contract.rs  count_execution.rs  data_edit.rs  experience.rs  mod.rs  registry.rs  runtime.rs
apps/desktop/src-tauri/src/adapters/common/: capabilities.rs  count_results.rs  graph_results.rs  gremlin_ws.rs  http_client.rs  operations.rs  paging.rs  payloads.rs  results.rs  sql_batch.rs  structure.rs  tree_manifest.rs
apps/desktop/src-tauri/src/adapters/common/capabilities/: capability_sets.rs
apps/desktop/src-tauri/src/adapters/common/operations/: executor.rs  manifest.rs  planning.rs
apps/desktop/src-tauri/src/adapters/common/tree_manifest/: mod.rs
apps/desktop/src-tauri/src/adapters/data_edit/: requests.rs  tests.rs
apps/desktop/src-tauri/src/adapters/datastores/: mod.rs
apps/desktop/src-tauri/src/adapters/datastores/arango/: connection.rs  diagnostics.rs  explorer.rs  mod.rs  query.rs  query_request.rs  query_results.rs  structure.rs
apps/desktop/src-tauri/src/adapters/datastores/bigquery/: connection.rs  diagnostics.rs  explorer.rs  mod.rs  query.rs  query_request.rs  query_results.rs
apps/desktop/src-tauri/src/adapters/datastores/cassandra/: connection.rs  diagnostics.rs  explorer.rs  mod.rs  native.rs  native_tls.rs  query.rs
apps/desktop/src-tauri/src/adapters/datastores/clickhouse/: connection.rs  explorer.rs  http_client.rs  mod.rs  payloads.rs  query.rs  query_request.rs
apps/desktop/src-tauri/src/adapters/datastores/cockroachdb/: mod.rs
apps/desktop/src-tauri/src/adapters/datastores/common/: mod.rs
apps/desktop/src-tauri/src/adapters/datastores/cosmosdb/: cancellation.rs  catalog.rs  connection.rs  diagnostics.rs  explorer.rs  mod.rs  query.rs  (+2 more)
apps/desktop/src-tauri/src/adapters/experience/: objects.rs  providers.rs
apps/desktop/src-tauri/src/app/: runtime.rs
apps/desktop/src-tauri/src/app/runtime/: app_logs.rs  app_updates.rs  app_updates_github.rs  app_updates_settings.rs  datastore_api_server.rs  datastore_commands.rs  datastore_mcp_client_setup.rs  datastore_mcp_server.rs  datastore_security_checks.rs  datastore_tab_refresh.rs  environment_guards.rs  environment_resolution_tests.rs  environments.rs  execution.rs  fixtures.rs  library.rs  library_validation.rs  preferences.rs  profile_fixture_warnings.rs  profile_options.rs  profile_options_cloud.rs  profile_options_graph.rs  profile_options_mongodb.rs  profile_options_mysql.rs  profile_options_timeseries.rs  profile_options_warehouse.rs  profile_tests.rs  profiles.rs  query_tab_scoped_tests.rs  query_tab_tests.rs  query_tabs.rs  query_tabs_scoped.rs  query_tabs_scoped_redis.rs  response_redaction.rs  response_redaction_keys.rs  response_redaction_tests.rs  saved_work.rs  settings_tabs.rs  sql_hint_tests.rs  tabs.rs  (+9 more)
apps/desktop/src-tauri/src/commands/: app.rs  workspace.rs
apps/desktop/src-tauri/src/commands/workspace/: api_server.rs  connections.rs  execution.rs  import_export.rs  library.rs  mcp_server.rs  mod.rs  security.rs  tabs.rs  ui_state.rs  workspace_management.rs
apps/desktop/src-tauri/src/domain/: error.rs  models.rs
apps/desktop/src-tauri/src/domain/models/: adapter.rs  api_server.rs  connection.rs  execution.rs  library.rs  mcp_server.rs  mod.rs  security.rs  ui_state.rs  workspace.rs
apps/desktop/src-tauri/src/infrastructure/: logging.rs  mod.rs
apps/desktop/src-tauri/src/persistence/: durable_write.rs  mod.rs
apps/desktop/src-tauri/src/security/: mod.rs  mongodb_script.rs
apps/desktop/src-tauri/tests/: adapters_integration.rs
apps/desktop/src-tauri/tests/fixtures/architecture/: datastore-adapter-contracts.json
apps/desktop/src-tauri/tests/unit/adapters/: count_execution_tests.rs  data_edit_tests.rs  experience_tests.rs  registry_tests.rs
apps/desktop/src-tauri/tests/unit/commands/: app_tests.rs
apps/desktop/src-tauri/tests/unit/domain/: error_tests.rs
apps/desktop/src-tauri/tests/unit/persistence/: durable_write_tests.rs
apps/desktop/src-tauri/tests/unit/security/: mod_tests.rs  mongodb_script_tests.rs
(+1832 files in other folders)
