[package]
name = "datapadplusplus-desktop"
version = "0.1.39"
description = "DataPad++ desktop shell"
license-file = "../../../LICENSE"
edition = "2021"

[lib]
name = "datapadplusplus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false }
duckdb = { version = "1.10502.0", features = ["bundled"] }
futures-util = "0.3"
hmac = "0.12"
httpdate = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mongodb = "3.4"
pbkdf2 = "0.12"
rand = "0.8"
redis = { version = "1.2", features = ["aio", "tokio-comp", "tokio-native-tls-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "1.8.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "json", "chrono", "uuid", "bigdecimal"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.4"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "sql-browser-tokio"] }
tokio = { version = "1", features = ["io-util", "net", "process", "time"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
toml = "0.8"
url = "2.5.8"
zip = "6.0.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
