[package]
name = "datapadplusplus-desktop"
version = "0.1.48"
description = "DataPad++ desktop shell"
homepage = "https://datapad-plus-plus.org/"
repository = "https://github.com/FullMontyDevelopment/DataPadPlusPlus"
license-file = "../../../LICENSE"
edition = "2021"

[lib]
name = "datapadplusplus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
aws-config = { version = "=1.8.18", features = ["behavior-version-latest"] }
aws-credential-types = "=1.2.14"
aws-sdk-neptunedata = "=1.100.0"
aws-sigv4 = { version = "=1.4.5", features = ["sign-http"] }
aws-smithy-types = "=1.4.9"
axum = "0.8"
base64 = "0.22"
bigdecimal = "0.4"
chrono = { version = "0.4", default-features = false }
duckdb = { version = "1.10502.0", features = ["bundled"] }
futures-util = "0.3"
hmac = "0.12"
httpdate = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mongodb = "3.4"
neo4rs = { version = "=0.8.0", features = ["serde_json"] }
pbkdf2 = "0.12"
rand = "0.8"
redis = { version = "1.2", features = ["aio", "tokio-comp", "tokio-native-tls-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "gzip", "brotli", "deflate", "charset"] }
rmcp = { version = "1.8.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
rquickjs = { version = "=0.12.1", features = ["classes", "macro", "properties"] }
rustls = "=0.23.42"
rustls-pemfile = "=2.2.0"
scylla = { version = "=1.7.0", features = ["bigdecimal-04", "chrono-04", "rustls-023"] }
semver = "1.0.28"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "json", "chrono", "uuid", "bigdecimal"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.4"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "sql-browser-tokio"] }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
toml = "0.8"
tree-sitter = "=0.26.11"
tree-sitter-javascript = "=0.25.0"
url = "2.5.8"
webpki-roots = "=1.0.8"
zip = "6.0.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.dev]
debug = 2

[profile.dev.package."*"]
debug = 0
